src/gc-arena/tests/ui/no_drop_and_drop_impl.stderr
error[E0119]: conflicting implementations of trait `MustNotImplDrop` for type `Foo`
 --> $DIR/no_drop_and_drop_impl.rs:3:10
  |
3 | #[derive(Collect)]
  |          ^^^^^^^
  |
  = note: conflicting implementation in crate `gc_arena`:
          - impl<T> MustNotImplDrop for T
            where T: Drop;
  = note: this error originates in the derive macro `Collect` (in Nightly builds, run with -Z macro-backtrace for more info)
