src/gc-arena/tests/ui/no_drop_and_drop_impl.rs
use gc_arena::Collect;

#[derive(Collect)]
#[collect(no_drop)]
struct Foo {
}

impl Drop for Foo {
    fn drop(&mut self) {}
}

fn main() {}
